<resources>

    <!-- tela de carteirinha -->
    <string name="app_name">Carteirinha</string>
    <string name="title_carteirinha">Carteirinha:\nDoador de Sangue</string>
    <string name="doador_sangue">Doador de Sangue</string>
    <string name="nome_doador">Rubi Silva</string>
    <string name="registro_doador">Registro Doador</string>
    <string name="rd_doador">1.234.567-8/ES</string>
    <string name="data_doador">10/02/20</string>
    <string name="tipo_sanguineo">Tipo Sanguíneo</string>
    <string name="sangue_doador">O+</string>
    <string name="title_carteirinha_medula">Carteirinha:\nDoador de Medula Óssea</string>
    <string name="doador_medula">Doador de Medula Óssea</string>
    <string name="registro_redome_carteirinha">Registro REDOME</string>
    <string name="numero_redome">9432</string>
    <string name="data_cadastro">Data de Cadastro</string>
    <string name="data_doador_medula">10/02/20</string>
    <string name="status">Status</string>
    <string name="status_doador">Ativo</string>
    <string name="baixar_pdf">Baixar PDF</string>
    <string name="atualizar">Atualizar</string>
    <string name="title_carteirinha_medula_sangue">Carteirinha:\nDoador de Medula Óssea e  de Sangue</string>
    <string name="doador_medula_sangue">Doador de Medula Óssea e de Sangue</string>
    <string name="titulo_nao_doador">Você não está cadastrado como doador de sangue ou medula óssea </string>
    <string name="subtitulo_nao_doador">Caso tenha se cadastrado, clique no botão abaixo para atualizar suas informações e ter acesso a carteirinha</string>



    <!-- tela de dados do doador -->
    <string name="titulo_dados_doador">Atualize suas informações de doador</string>
    <string name="data_hemoes">Data de Cadastro no HEMOES</string>
    <string name="registro_hemoes">Registro de Doador do HEMOES</string>
    <string name="data_redome">Data de Cadastro no REDOME</string>
    <string name="registro_redome">Registro de Doador do REDOME</string>
    <string name="botao_atualizar">Atualizar Cadastro</string>
    <string name="data_vazia">00/00/0000</string>
    <string name="registro_vazio">000000-00</string>

    <!-- tela inicial -->
    <string name="ola">Olá,</string>
    <string name="nome_usuario">Rubi Silva</string>
    <string name="tipo_sanguineo_usuario">O+</string>
    <string name="proxima_doacao">Você poderá fazer sua próxima doação de sangue em:</string>
    <string name="dias_proxima_doacao">12</string>
    <string name="dias">dias</string>
    <string name="agendar_agora">Agendar agora</string>
    <string name="acesso_rapido">Acesso Rápido</string>
    <string name="historico">Histórico</string>
    <string name="processo">Processo</string>
    <string name="questionario">Questionário</string>
    <string name="descontos">Descontos</string>
    <string name="avisos_importantes">Avisos Importantes</string>
    <string name="ver_todos">Ver todos</string>
    <string name="sangue_o_positivo_requisitado">Sangue O+ requisitado</string>
    <string name="aviso_estoque">O Hemocentro Central está com baixo estoque\ndo seu tipo sanguíneo.</string>
    <string name="compatibilidade_encontrada">Compatibilidade Encontrada!</string>
    <string name="compatibilidade_descricao">Toque para ver detalhes sobre doação de\nmedula.</string>

    <string name="ranking_local">Ranking Local</string>
    <string name="ranking_primeiro">Maria Costa</string>
    <string name="pontos_primeiro">3.450 pts</string>
    <string name="ranking_segundo">Cláudia Lima</string>
    <string name="pontos_segundo">2.890 pts</string>
    <string name="ranking_terceiro">Rubi Silva (Você)</string>
    <string name="pontos_terceiro">1.250 pts</string>
    <string name="primeiro_lugar">#1</string>
    <string name="segundo_lugar">#2</string>
    <string name="terceiro_lugar">#3</string>
    <string name="notificacoes">Notificações</string>

    <!-- tela de perfil -->
    <string name="iniciais">RS</string>
    <string name="tipo_sanguineo_perfil">O+</string>
    <string name="email">rubi_silva@gmail.com</string>
    <string name="nivel_perfil">Nível 5</string>
    <string name="nome_nivel_perfil">Heroína do Sangue</string>
    <string name="qnt_pontos">1.250</string>
    <string name="pontos_totais">pontos totais</string>
    <string name="qnt_pontos_proximo_nivel">250 pontos para o próximo nível</string>

    <string name="medalhas">Suas Medalhas</string>
    <string name="primeira_medalha">Primeira Gota</string>
    <string name="primeira_medalha_descricao">Realizou a primeira\ndoação</string>
    <string name="segunda_medalha">Doador</string>
    <string name="segunda_medalha_descricao">Faz a primeira\ndoação de plasma</string>
    <string name="terceira_medalha">Herói da Medula</string>
    <string name="terceira_medalha_descricao">Cadastrou no\nREDOME</string>
    <string name="quarta_medalha">Recrutador</string>
    <string name="quarta_medalha_descricao">Convidou 3 \namigos</string>
    <string name="quinta_medalha">Doador</string>
    <string name="quinta_medalha_descricao">Doou 3x em \num ano</string>
    <string name="sexta_medalha">Lenda Viva</string>
    <string name="sexta_medalha_descricao">20 doações\nrealizadas</string>
    <string name="sair_conta">Sair da Conta</string>

    <!-- tela de conteúdos educativos - autores e títulos -->
    <string name="autor1">Dra. Silva</string>
    <string name="autor2">Dr. Costa</string>
    <string name="autor3">Nutri. Santos</string>
    <string name="autor4">Enf. Oliveira</string>

    <string name="titulo1">Como funciona a doação de sangue</string>
    <string name="titulo2">Mitos sobre a doção de medula óssea</string>
    <string name="titulo3">O que comer antes de doar</string>
    <string name="titulo4">Quem pode doar sangue?</string>
    <string name="titulo5">O processo de transplante de medula</string>
    <string name="titulo6">Cuidados após a doação</string>

    <string name="categoria1">Processo de doação</string>
    <string name="categoria2">Medula óssea</string>
    <string name="categoria3">Pré-doação</string>
    <string name="categoria4">Pós-doação</string>

    <!-- páginas de questionário -->
    <string name="pagName">Pré-Triagem</string>
    <string name="text">Responda as perguntas e descubra se você está ou não apto a doar. </string>

    <string name="pergunta1">Você tem entre 16 e 69 anos?</string>
    <string name="pergunta2">Você pesa mais de 50kg?</string>
    <string name="pergunta3">Você fez alguma tatuagem ou maquiagem definitiva nos últimos 12 meses? </string>
    <string name="pergunta4">Você teve febre ou sintomas de gripe nos últimos 7 dias?</string>
    <string name="pergunta5">Você fez alguma cirurgia de grande porte  nos últimos 5 meses?</string>

    <string name="opcao1">Sim</string>
    <string name="opcao2">Não</string>

    <!-- Apto e Não-apto -->
    <string name="condicao1">Você está apto para doar!</string>
    <string name="ex1">Ótima notícia! Baseado nas suas respostas, você atende aos requisitos básicos para doar sangue.</string>

    <string name="condicao2">Voce não está apto para doar no momento.</string>
    <string name="ex2">Algumas de suas respostas indicam que você precisa aguardar um pouco mais antes de doar. Consulte as regras completas.</string>

    <!-- páginas de processo -->
    <string name="titulo_processo">O Processo</string>
    <string name="subtitulo_processo">Simples, rápido e seguro.</string>
    <string name="processo_tempo">Tempo Estimado</string>
    <string name="processo_tempo_min">40 – 60 min</string>
    <string name="titulo_cadastro">Cadastro</string>
    <string name="descricao_cadastro">Apresentação de documento oficial com foto e atualização \n de dados.</string>
    <string name="titulo_pre_triagem">Pré-Triagem</string>
    <string name="descricao_pre_triagem">Verificação dos sinais vitais: pressão arterial, temperatura, \n frequência cardíaca, peso dosagem de hemoglobina.</string>
    <string name="titulo_triagem">Triagem Clínica</string>
    <string name="descricao_triagem">Entrevista individual e sigilosa sobre seu estado de saúde \n para verificar se a doação pode ser feita e assinatura do \n Termo de Consentimento Livre e Esclarecido.</string>
    <string name="titulo_coleta">Coleta de Sangue</string>
    <string name="descricao_coleta">Doação feita através de punção com agulha em uma veia \n do braço com o material estéril e descartável. O volume \n de sangue coletado varia de 400 a 470ml e o processo \n dura de 5 a 15 minutos.</string>
    <string name="titulo_lanche">Lanche e Descanso</string>
    <string name="descricao_lanche">Após a doação, o doador faz um lanche para repor os níveis \n de glicemia e hidratação e permanece no Hemoes por pelo \n menos 15 minutos após o fim da doação. Essas medidas \n visam a diminuição do risco de problemas após a doação.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>