<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingStart="22dp"
            android:paddingEnd="22dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="18dp">

                <TextView
                    android:id="@+id/titulo_nao_doador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_nao_doador"
                    android:textColor="@color/text_title"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textAlignment="center" />
            </LinearLayout>

            <TextView
                android:id="@+id/mensagem_atualizar_dados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitulo_nao_doador"
                android:textColor="@color/cinza"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textAlignment="center" />

            <Button
                android:id="@+id/BtnAtualizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/botao_atualizar"
                android:textColor="@color/white"
                android:backgroundTint="@color/red"
                android:padding="18dp"
                android:textSize="18sp"
                android:layout_marginTop="24dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>